--- a/components/Cards/Cards.module.css
+++ b/components/Cards/Cards.module.css
@@ -1,16 +1,18 @@
-.card {
+.Cards {
     display: flex;
     flex-direction: column;
     width: 18rem;
     height: 10rem;
     align-items: center;
+    
   }
   
-  img {
+  .cardImage {
     border-radius: 2rem;
     width: 18rem;
     height: 10rem;
     z-index: 99999;
+    align-content: center;
   }
   
   .bottomTitle {
@@ -21,7 +23,7 @@
     background-color: var(--lightYellow)
   }
   
-  h2 {
-    padding-left: 0.5rem;
+  .h2 {
+    padding-left: 20px;
     font-size: 24px;
   }
