--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,6 @@
 :root {
   --lightYellow:#F7EFDA; 
-  --black: #0000; 
+  --black: #000000; 
   --darkGreen: #1A3D28;
   --paleGreen: #DDE5D6;
   --midGreen: #466F55;
@@ -8,5 +8,8 @@
   --white: #ffff; 
   --babyPink: #F4DCDC; 
   --beige: #CBBCB1; 
+  --clearButton: rgba(221, 229, 214, 0.3);
 
+  --button-fontsize: 1rem;
+  --h1-fontsize: 5rem;
 }
