--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -6,3 +6,17 @@
   padding: 6rem;
   min-height: 20vh;
 }
+
+.cards {
+  margin-top: 65px;
+}
+
+.h3 {
+  text-align: left;
+  margin-right: 20px;
+}
+
+.chips {
+  align-items: center;
+  text-wrap: nowrap;
+}
