adding landing page content and changing button code

--- a/styles/Landing.module.css
+++ b/styles/Landing.module.css
@@ -1,13 +1,102 @@
 .main {
   display: flex;
+  font-family: "Figtree", sans-serif;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
   padding: 6rem;
-  min-height: 60vh;
+  min-height: 80vh;
+  background-image: url('/images/landing-page.jpeg');
+  background-size: cover;
+  background-position: center top;
 }
 
-.heading {
+.appName {
+  margin-bottom: 20px;
+  font-family: "Wendy One", sans-serif;
   font-size: var(--h1-fontsize);
+  font-weight: 700;
+  font-style: bolder;
+}
+
+.container {
+  margin: 0 auto;
   text-align: center;
+}
+
+/* Buttons & Hover Effects */
+.buttonContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
+}
+
+.buttonContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  gap: 40px;
+}
+
+.button {
+  padding: 15px 40px;
+  cursor: pointer;
+  border-radius: 25px;
+  border: 2px solid var(--black);
+  background-color: var(--clear-button);
+  color: var(--black);
+  transition: background-color 0.3s ease;
+  font-size: var(--button-fontsize);
+  width: 200px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1)
+}
+
+.button:hover {
+  background-color: var(--darkGreen);
+  color: var(--white);
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.2);
+
+}
+
+.buttonTwo {
+  padding: 15px 40px;
+  cursor: pointer;
+  border-radius: 25px;
+  border: 2px solid var(--darkGreen);
+  background-color: var(--darkGreen);
+  color: var(--white);
+  transition: background-color 0.3s ease;
+  font-size: var(--button-fontsize);
+  width: 200px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1)
+}
+
+.buttonTwo:hover {
+  background-color: var(--clear-button);
+  color: var(--black);
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.2);
+
+}
+
+/* Media query for smaller screens */
+@media (max-width: 428px) {
+  .main {
+    background-image: url('/images/landing-page.jpeg');
+    background-size: cover;
+    background-position: center top;
+  }
+}
+
+/* Media query for larger screens */
+@media (min-width: 1024px) {
+  .main {
+    background-image: url('/images/landing-page.jpeg'), linear-gradient(to bottom, var(--lightYellow), var(--lightGreen));
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center top, center;
+  }
 }
