--- a/components/Chips/Chips.module.css
+++ b/components/Chips/Chips.module.css
@@ -4,14 +4,14 @@
     height: 1.5rem;
     text-align: center;
     background-color: var(--lightGreen);
-    border-color: var(--paleGreen);
-    border-radius: 3.5px;
-    
+    border-color: var(--lightGreen);
+    border-radius: 5px;
     margin: 7px;
     
 }
 .chipCard:hover {
     background-color: var(--darkGreen);
+    border-color: var(--darkGreen);
     color: var(--white);
 }
 
