--- a/components/Quiz/Quiz.module.css
+++ b/components/Quiz/Quiz.module.css
@@ -1,10 +1,13 @@
 .setup {
-    width: 350px;
-    height: 255px;
+    width: 300px;
+    height: 240px;
+    flex-direction: row;
     background-color: var(--midGreen);
     border-radius: 23px;
     position: relative;
     z-index: 2;
+    text-align: center;
+
   }
   .action {
     width: 328px;
@@ -18,6 +21,7 @@
     z-index: 1;
     display: flex;
     justify-content: space-around;
+    align-items: center;
     align-items: center;
   }
   
@@ -41,6 +45,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-top: 75px;
   }
   
   .question p {
@@ -54,16 +59,43 @@
     padding: 0px 15px;
   }
   
-  .choices {
+  .choicesCont {
+    display: flex;
+    flex-direction: row;
     width: 270px;
     height: 75px;
     background-color: var(--paleGreen);
     border-radius: 23px;
-    border: 1px solid black;
+    border: 0.5px solid black;
     text-align: center;
     margin-top: 5%;
     font: "Figtree";
     font-weight: 500;
     font-size: 18px;
   }
+
+  .choicesCont button {
+    flex: 1;
+    width: 270px;
+    height: 75px;
+    width: 100%; /* Ensures button fills the available space */
+    background-color: var(--paleGreen); /* Apply background color */
+    border-radius: 23px;
+    border: 0.5px solid black;
+    text-align: center;
+    font: "Figtree";
+    font-weight: 500;
+    font-size: 18px;
+    transition: background-color 0.3s ease; /* Add transition */
+  }
+  
+   .choicesCont button:hover {
+    background-color: var(--lightGreen);
+    border-radius: 23px;
+    border: 1px solid black;
+    text-align: center;
+    font: "Figtree";
+    font-weight: 500;
+    font-size: 18px;
+    flex-direction: row;  } 
   
