--- a/components/Quiz/Quiz.module.css
+++ b/components/Quiz/Quiz.module.css
@@ -1,15 +1,15 @@
 .setup {
     width: 300px;
     height: 240px;
-    flex-direction: row;
     background-color: var(--midGreen);
     border-radius: 23px;
-    position: relative;
+    margin: 5px;
     z-index: 2;
     text-align: center;
-
   }
+  
   .action {
+    display: flex;
     width: 328px;
     height: 133px;
     border: 1px solid black;
@@ -19,9 +19,7 @@
     margin-top: 356px;
     margin-left: 1px;
     z-index: 1;
-    display: flex;
     justify-content: space-around;
-    align-items: center;
     align-items: center;
   }
   
@@ -31,14 +29,6 @@
     border: 1px solid black;
     border-radius: 14.21px;
     text-align: center;
-  }
-  
-  .skipButton {
-    background-color: var(--paleGreen);
-  }
-  
-  .nextButton {
-    background-color: var(--white);
   }
   
   .question {
@@ -76,26 +66,18 @@
 
   .choicesCont button {
     flex: 1;
-    width: 270px;
-    height: 75px;
-    width: 100%; /* Ensures button fills the available space */
-    background-color: var(--paleGreen); /* Apply background color */
+    background-color: var(--paleGreen);
     border-radius: 23px;
     border: 0.5px solid black;
     text-align: center;
     font: "Figtree";
     font-weight: 500;
     font-size: 18px;
-    transition: background-color 0.3s ease; /* Add transition */
+    transition: background-color 0.3s ease;
   }
   
    .choicesCont button:hover {
     background-color: var(--lightGreen);
-    border-radius: 23px;
     border: 1px solid black;
-    text-align: center;
-    font: "Figtree";
-    font-weight: 500;
-    font-size: 18px;
-    flex-direction: row;  } 
+  } 
   
