--- a/components/LargeButton/LargeButton.module.css
+++ b/components/LargeButton/LargeButton.module.css
@@ -1,17 +1,20 @@
 .largeButton {
-    padding: 15px 40px;
-    cursor: pointer;
-    border-radius: 10px;
-    background-color: var(--paleGreen);
-    border-color: var(--paleGreen);
-    color: var(--black);
-    transition: background-color 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
-    width: 300px;
-    height: 45px;
-  }
-  
-  .largeButton:hover {
-    background-color: var(--lightGreen);
-    color: var(--black);
-    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.2);
-  }
+  padding: 0px 20px;
+  cursor: pointer;
+  border-radius: 10px;
+  background-color: var(--paleGreen);
+  border-color: var(--paleGreen);
+  color: var(--black);
+  transition: background-color 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
+  width: 350px;
+  height: 50px;
+  margin-bottom: 1rem;
+  text-align: left;
+  font-size: 16px;
+}
+
+.largeButton:hover {
+  background-color: var(--lightGreen);
+  color: var(--black);
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.2);
+}
