--- a/components/Navigation/Navigation.module.css
+++ b/components/Navigation/Navigation.module.css
@@ -2,29 +2,40 @@
     display: flex;
     position: fixed;
     width: 100%;
-    height: 85px;
+    height: 80px;
     bottom: 0;
     background-color: #466f55;
     z-index: 99999;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
- }
-    
+}
+
 .button {
     border: none;
     background: none;
-    }
-    
+}
+
 .selectedButton {
     background: linear-gradient(to right, var(--lightGreen), var(--lightGreen));
     border: none;
     /* box-shadow: 0 0 5px 2px var(--lightGreen); */
     border-radius: 40%;
 }
-    
+
 .icon {
-color: white;
-width: 52px;
-height: 52px;
-padding: 0px 8px;
+    color: white;
+    width: 52px;
+    height: 52px;
+    padding: 0px 8px;
+}
+
+/* Media query for larger screens */
+@media (min-width: 1024px) {
+    .main {
+        background: linear-gradient(to bottom, var(--lightYellow), var(--lightGreen));
+    }
+
+    .container {
+        max-width: 430px;
+    }
 }
