--- a/styles/Calendar.module.css
+++ b/styles/Calendar.module.css
@@ -1,21 +1,27 @@
 .main {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.menuIcon {
+  position: absolute;
+  top: 30px;
+  right: 30px;
+}
+
 .container {
-    margin: 0 auto;
-    text-align: center;
-  }
-  
+  margin: 100px auto;
+  text-align: center;
+}
+
 .h3 {
-    text-align: left;
-    margin-right: 20px;
-  }
-  
+  text-align: left;
+  margin-right: 20px;
+}
+
 .content {
-    display: flex;
-    flex-direction: column;
-  }
+  display: flex;
+  flex-direction: column;
+}
