--- a/styles/PageHome.module.css
+++ b/styles/PageHome.module.css
@@ -4,6 +4,14 @@
   justify-content: space-between;
   align-items: center;
   min-height: 80vh;
+  font-family: "Figtree", sans-serif;
+}
+
+.menuIcon {
+  position: absolute;
+  top: 30px;
+  right: 30px;
+  cursor: pointer;
 }
 
 .container {
@@ -21,6 +29,7 @@
 }
 
 .chipsWrapper {
+  margin-top: 100px;
   width: 100%;
   overflow-x: auto;
 }
