--- a/styles/PageHome.module.css
+++ b/styles/PageHome.module.css
@@ -9,7 +9,7 @@
 
 .menuIcon {
   position: absolute;
-  top: 30px;
+  top: 40px;
   right: 30px;
   cursor: pointer;
 }
@@ -37,4 +37,18 @@
 .chips {
   display: flex;
   justify-content: center;
+}
+
+/* Media query for smaller screens */
+@media (max-width: 428px) {}
+
+/* Media query for larger screens */
+@media (min-width: 1024px) {
+
+    .menuIcon {
+        position: absolute;
+        top: 30px;
+        right: 650px;
+        cursor: pointer;
+    }
 }
