--- a/components/HamburgerMenu/HamburgerMenu.module.css
+++ b/components/HamburgerMenu/HamburgerMenu.module.css
@@ -51,3 +51,25 @@
 .link:hover {
   background-color: var(--lightGreen);
 }
+
+/* Media query for smaller screens */
+@media (max-width: 428px) {}
+
+/* Media query for larger screens */
+@media (min-width: 1024px) {
+  .hamburgerMenu {
+    width: 316px;
+    height: 100%;
+    display: flex;
+    position: fixed;
+    align-items: center;
+    background-color: var(--darkGreen);
+    border-bottom-left-radius: 10px;
+    border-top-left-radius: 10px;
+    top: 0px;
+    right: 623px;
+    z-index: 100000;
+    flex-direction: column;
+    justify-content: center;
+  }
+}
