--- a/styles/LearnMore.module.css
+++ b/styles/LearnMore.module.css
@@ -1,15 +1,70 @@
 .main {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     min-height: 80vh;
     font-family: "Figtree", sans-serif;
+    overflow-x: auto;
+}
+
+.contentWrapper {
+    width: 430px;
+    height: 932px;
+    background-color: var(--white);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 .menuIcon {
     position: absolute;
-    top: 30px;
+    top: 40px;
     right: 30px;
     cursor: pointer;
+}
+
+.chartsWrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-top: 0px;
+    width: auto;
+    overflow-x: auto;
+}
+
+.doughnutChart {
+        text-align: center;
+        background-color: rgb(221, 229, 214, 0.3);
+        border-radius: 15px;
+        padding: 10px;
+        padding-bottom: 25px;
+        overflow-x: auto;
+}
+
+.pieChart {
+    text-align: center;
+    background-color: rgb(221, 229, 214, 0.3);
+    border-radius: 15px;
+    padding: 10px;
+    padding-bottom: 25px;
+    overflow-x: auto;
+}
+
+/* Media query for smaller screens */
+@media (max-width: 428px) {
+
+}
+/* Media query for larger screens */
+@media (min-width: 1024px) {
+    .main {
+        background: linear-gradient(to bottom, var(--lightYellow), var(--lightGreen));
+    }
+    .menuIcon {
+        position: absolute;
+        top: 30px;
+        right: 650px;
+        cursor: pointer;
+    }
 }
