--- a/styles/Profile.module.css
+++ b/styles/Profile.module.css
@@ -19,7 +19,7 @@
 
 .menuIcon {
     position: absolute;
-    top: 30px;
+    top: 40px;
     right: 30px;
     cursor: pointer;
 }
@@ -51,5 +51,12 @@
 @media (min-width: 1024px) {
     .main {
         background: linear-gradient(to bottom, var(--lightYellow), var(--lightGreen));
+    }
+
+    .menuIcon {
+        position: absolute;
+        top: 30px;
+        right: 650px;
+        cursor: pointer;
     }
 }
