adding kianas changes to even history pages to event cards and search bar and even history page and zalidas quiz  touch ups

--- a/styles/PageHome.module.css
+++ b/styles/PageHome.module.css
@@ -51,4 +51,10 @@
         right: 650px;
         cursor: pointer;
     }
+
+    .chipsWrapper {
+      margin-top: 100px;
+      max-width: 430px;
+      overflow-x: auto;
+    }
 }
