--- a/components/Cards/Cards.module.css
+++ b/components/Cards/Cards.module.css
@@ -15,16 +15,66 @@
   align-content: center;
 }
 
-.bottomTitle {
+.cardInfo {
   width: 353px;
-  height: 143px;
   border-radius: 20px;
-  margin-top: -10px;
+  margin-top: -15px;
   background-color: var(--lightYellow);
   text-align: left;
 }
 
+.headInfo {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+}
+
+.joinButton {
+  width: 66px;
+  height: 22px;
+  margin-right: 10px;
+  font-weight: 500;
+  font-size: 13px;
+  background-color: var(--lightYellow);
+  border: 1px solid var(--black);
+  border-radius: 5px;
+  /* margin-top: 40px; */
+}
+.joinButton:hover {
+  width: 66px;
+  height: 22px;
+  margin-right: 10px;
+  font-weight: 500;
+  font-size: 13px;
+  background-color: var(--black);
+  color: var(--white);
+  border: 1px solid var(--black);
+  border-radius: 5px;
+  /* margin-top: 40px; */
+}
+
 .h2 {
+  padding-top: 10px;
   padding-left: 20px;
+  margin-bottom: 3px;
   font-size: 24px;
+}
+
+.description {
+  font-weight: 500;
+  font-size: 13px;
+  padding: 0px 20px;
+}
+
+.generalInfo {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 10px;
+}
+
+.generalInfo span {
+  font-weight: 500;
+  font-size: 13px;
 }
