--- a/styles/QuizPage.module.css
+++ b/styles/QuizPage.module.css
@@ -47,6 +47,122 @@
   cursor: pointer;
 }
 
+.setup {
+  width: 300px;
+  height: auto;
+  background-color: var(--midGreen);
+  border-radius: 23px;
+  margin: 5px;
+  z-index: 2;
+  text-align: center;
+  padding: 20px;
+  color: var(--white);
+}
+
+/* Buttons & Hover Effect */
+.buttonCont {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin-top: 5px;
+  gap: 10px;
+  padding-top: 20px;
+}
+
+
+/* Styles for buttons */
+.button,
+.buttonTwo {
+  padding: 15px 40px;
+  cursor: pointer;
+  border-radius: 25px;
+  border: 2px solid var(--black);
+  background-color: var(--clear-button);
+  color: var(--black);
+  transition: background-color 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
+  min-width: 150px;
+}
+
+.buttonTwo {
+  padding: 15px 40px;
+  cursor: pointer;
+  border-radius: 25px;
+  border: 2px solid var(--darkGreen);
+  background-color: var(--darkGreen);
+  color: var(--white);
+  transition: background-color 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
+  min-width: 170px;
+}
+
+.button:hover {
+  background-color: var(--darkGreen);
+  color: var(--white);
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.2);
+}
+
+.buttonTwo:hover {
+  background-color: var(--clear-button);
+  color: var(--black);
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.2);
+}
+
+.textContainer {
+  max-width: 350px;
+  text-align: center;
+  margin-bottom: 10rem;
+}
+
+.quizCompleted {
+  margin-top: 0rem; 
+  margin-bottom: 3rem;
+}
+
+.loadingContainer {
+  max-width: 430px;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.loadingAnimation {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.loadingAnimation img {
+  width: 50px; 
+  height: 50px; 
+  margin: 0 10px;
+  animation: 20s infinite;
+}
+
+.almostDoneAnimation img {
+  width: 50px; 
+  height: 50px; 
+  margin: 0 10px;
+  animation: 20s infinite;
+}
+
+.almostDoneAnimation {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.almostDoneAnimation p {
+  font-size: 18px;
+  margin-left: 10px;
+  animation: 20s infinite; 
+}
+
+.almostDoneAnimation p:nth-child(2) {
+  animation-delay: 5s; 
+}
+
 /* Media query for smaller screens */
 @media (max-width: 428px) {
   .main {
