--- a/styles/PageHome.module.css
+++ b/styles/PageHome.module.css
@@ -21,6 +21,7 @@
 
 .cards {
   margin-top: 65px;
+  margin-bottom: 50px;
 }
 
 .h3 {
@@ -29,7 +30,7 @@
 }
 
 .chipsWrapper {
-  margin-top: 100px;
+  margin-top: 30px;
   width: 100%;
   overflow-x: auto;
 }
