--- a/components/Chips/Chips.module.css
+++ b/components/Chips/Chips.module.css
@@ -8,7 +8,9 @@
   margin: 7px;
   flex: 0 0 auto;
   white-space: nowrap;
+  margin-left: 10px;
 }
+
 
 .chipCard:hover {
   background-color: var(--darkGreen);
@@ -19,4 +21,15 @@
 .chipCard:active {
   background-color: var(--darkGreen);
   color: var(--white);
+}
+
+/* Media query for smaller screens */
+@media only screen and (min-device-width: 428px) and (max-device-width: 926px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 3) {
+    
+}
+
+/* Media query for larger screens */
+@media only screen and (min-width: 1024px) {
+
+  
 }
