--- a/components/Navigation/Navigation.module.css
+++ b/components/Navigation/Navigation.module.css
@@ -8,6 +8,9 @@
     z-index: 99999;
     justify-content: space-evenly;
     align-items: center;
+    border-top-left-radius: 40px;
+    border-top-right-radius: 40px;
+
 }
 
 .button {
@@ -27,10 +30,11 @@
     width: 52px;
     height: 52px;
     padding: 0px 8px;
+    cursor: pointer;
 }
 
 /* Media query for larger screens */
-@media (min-width: 1024px) {
+@media only screen and (min-width: 1024px) {
     .container {
         max-width: 430px;
     }
