--- a/components/Quiz/Quiz.module.css
+++ b/components/Quiz/Quiz.module.css
@@ -74,6 +74,7 @@
   font-weight: 500;
   font-size: 18px;
   transition: background-color 0.3s ease;
+  cursor: pointer;
 }
 
 .choicesCont button:hover {
