--- a/components/SearchBar/SearchBar.module.css
+++ b/components/SearchBar/SearchBar.module.css
@@ -1,9 +1,48 @@
 .searchBar {
-    position: relative;
-    margin-top: 20px;
-    margin-bottom: -80px;
+  position: relative;
+  margin-top: 25px;
+}
+
+.searchBarInput {
+  background-color: var(--clearButton);
+  width: 314px;
+  height: 45px;
+  margin-top: 50px;
+  padding-left: 30px;
+  border-radius: 5px;
+}
+
+
+.searchIcon {
+  width: 24px;
+  height: 24px;
+  position: absolute;
+  top: 63%;
+  left: 45px;
+  transform: translateY(-50%);
+  pointer-events: none;
+}
+
+/* Media query for smaller screens */
+@media only screen and (min-device-width: 428px) and (max-device-width: 926px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 3) {
+  .searchIcon {
+    width: 24px;
+    height: 24px;
+    position: absolute;
+    top: 76%;
+    left: 46px;
+    transform: translateY(-50%);
+    pointer-events: none;
   }
-  
+}
+
+/* Media query for larger screens */
+@media only screen and (min-width: 1024px) {
+  .searchBar {
+    position: relative;
+    margin-top: 25px;
+  }
+
   .searchBarInput {
     background-color: var(--clearButton);
     width: 314px;
@@ -12,11 +51,15 @@
     padding-left: 30px;
     border-radius: 5px;
   }
-  
+
   .searchIcon {
     width: 24px;
     height: 24px;
     position: absolute;
-    top: 63%;
-    left: 5px;
+    top: 76%;
+    left: 46px;
+    transform: translateY(-50%);
+    pointer-events: none;
   }
+
+}
