--- a/styles/Landing.module.css
+++ b/styles/Landing.module.css
@@ -64,7 +64,7 @@
 }
 
 /* Media query for smaller screens */
-@media (max-width: 428px) {
+@media only screen and (min-device-width: 428px) and (max-device-width: 926px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 3) {
   .main {
     background-image: url('/images/landing-page.jpeg');
     background-size: cover;
@@ -73,7 +73,7 @@
 }
 
 /* Media query for larger screens */
-@media (min-width: 1024px) {
+@media only screen and (min-width: 1024px) {
   .main {
     background-image: url('/images/landing-page.jpeg'), linear-gradient(to bottom, var(--lightYellow), var(--lightGreen));
     background-repeat: no-repeat;
