--- a/styles/PageHome.module.css
+++ b/styles/PageHome.module.css
@@ -12,21 +12,27 @@
   top: 40px;
   right: 30px;
   cursor: pointer;
+  z-index: 100000;
 }
 
 .container {
-  margin: 0 auto;
+  margin: 0;
   text-align: center;
 }
 
 .cards {
-  margin-top: 65px;
+  margin-top: 5px;
   margin-bottom: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .h3 {
   text-align: left;
-  margin-right: 20px;
+  margin-left: 35px;
+  margin-top: 50px;
 }
 
 .chipsWrapper {
@@ -40,22 +46,40 @@
   justify-content: center;
 }
 
+.contentWrapper {
+  width: 430px;
+  height: 932px;
+  background-color: var(--white);
+  overflow-x: auto;
+}
+
 /* Media query for smaller screens */
-@media (max-width: 428px) {}
+@media only screen and (min-device-width: 428px) and (max-device-width: 926px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 3) {
+  .menuIcon {
+    position: fixed;
+    top: 30px;
+    right: 30px;
+    z-index: 100000;
+  }
+}
 
 /* Media query for larger screens */
-@media (min-width: 1024px) {
+@media only screen and (min-width: 1024px) {
+  .main {
+    background: linear-gradient(to bottom, var(--lightYellow), var(--lightGreen));
+    position: relative;
+  }
 
-    .menuIcon {
-        position: absolute;
-        top: 30px;
-        right: 650px;
-        cursor: pointer;
-    }
+  .chipsWrapper {
+    max-width: 430px;
+    overflow-x: auto;
+  }
 
-    .chipsWrapper {
-      margin-top: 100px;
-      max-width: 430px;
-      overflow-x: auto;
-    }
+  .menuIcon {
+    position: fixed;
+    top: 30px;
+    right: 650px;
+    cursor: pointer;
+    z-index: 100000;
+  }
 }
