--- a/styles/PageMap.module.css
+++ b/styles/PageMap.module.css
@@ -5,36 +5,64 @@
     align-items: center;
     min-height: 80vh;
     font-family: "Figtree", sans-serif;
+    z-index: 1;
+}
+
+.menuIcon {
+    position: fixed;
+    top: 40px;
+    right: 30px;
+    max-width: 430px;
+    z-index: 1;
+}
+
+.container {
+    margin: 0;
+    text-align: center;
+    z-index: 1;
 }
 
 .contentWrapper {
     width: 430px;
     height: 932px;
     background-color: var(--white);
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.menuIcon {
-    position: absolute;
-    top: 40px;
-    right: 30px;
-    cursor: pointer;
 }
 
 /* Media query for smaller screens */
-@media (max-width: 428px) {}
+@media only screen and (min-device-width: 428px) and (max-device-width: 926px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 3) {
+    .contentWrapper {
+        max-width: 430px;
+        min-height: auto;
+    }
+
+    .menuIcon {
+        position: fixed;
+        top: 30px;
+        right: 30px;
+        z-index: 1;
+    }
+}
 
 /* Media query for larger screens */
-@media (min-width: 1024px) {
+@media only screen and (min-width: 1024px) {
     .main {
         background: linear-gradient(to bottom, var(--lightYellow), var(--lightGreen));
+        position: relative;
     }
 
     .menuIcon {
         position: absolute;
+        top: 30px;
+        right: 650px;
+        cursor: pointer;
+    }
+
+    .contentWrapper {
+        width: 430px;
+    }
+
+    .menuIcon {
+        position: fixed;
         top: 30px;
         right: 650px;
         cursor: pointer;
