--- a/styles/QuizPage.module.css
+++ b/styles/QuizPage.module.css
@@ -109,10 +109,10 @@
   margin-bottom: 10rem;
 }
 
-.quizCompleted {
+/* .quizCompleted {
   margin-top: 0rem;
   margin-bottom: 3rem;
-}
+} */
 
 /* Media query for smaller screens */
 @media only screen and (min-device-width: 428px) and (max-device-width: 926px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 3) {
