--- a/components/Calendar/Calendar.module.css
+++ b/components/Calendar/Calendar.module.css
@@ -42,6 +42,7 @@
   display: flex;
   align-items: flex-end;
   justify-content: space-between;
+  margin-left: 10px;
 }
 
 .box {
@@ -49,12 +50,13 @@
   flex-direction: column;
   width: 341px;
   min-width: inherit;
-  /* height: 400px; */
+  height: 250px;
   border-radius: 23px;
   background-color: var(--paleGreen);
   justify-content: space-around;
   align-items: center;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
+  margin-left: 5px;
 }
 
 .event {
@@ -66,15 +68,6 @@
   justify-content: flex-start;
   align-items: center;
   margin-top: 15px;
-}
-
-.info {
-  font: "Figtree";
-  font-weight: 400;
-  size: 16px;
-  line-height: 25px;
-  color: var(--white);
-  flex-grow: 1;
 }
 
 .date {
@@ -94,6 +87,7 @@
   align-items: center;
   justify-content: center;
   margin-bottom: 10px;
+  cursor: pointer;
 }
 
 .createButton:hover {
@@ -105,6 +99,7 @@
   align-items: center;
   justify-content: center;
   margin-bottom: 10px;
+  cursor: pointer;
 }
 
 .pen {
@@ -112,8 +107,6 @@
   width: 32px;
   height: 32px;
 }
-
-
 
 .overlaySidebar {
   position: fixed;
@@ -140,6 +133,7 @@
   height: 10px;
   background-color: var(--white);
   border-radius: 15px;
+  cursor: pointer;
 }
 
 .eventForm {
@@ -219,6 +213,7 @@
 .createActive {
   color: var(--white);
   text-decoration: none;
+  cursor: pointer;
 }
 
 .createActive:hover {
