--- a/components/Chips/Chips.module.css
+++ b/components/Chips/Chips.module.css
@@ -7,10 +7,7 @@
   border-radius: 5px;
   margin: 7px;
   flex: 0 0 auto;
-  white-space: nowrap;
-  margin-left: 10px;
 }
-
 
 .chipCard:hover {
   background-color: var(--darkGreen);
@@ -23,13 +20,27 @@
   color: var(--white);
 }
 
+.chipsWrapper {
+  margin-top: 30px;
+  width: 100%;
+  overflow-x: auto;
+}
+
+.chips {
+  display: flex;
+  justify-content: center;    
+}
+
 /* Media query for smaller screens */
 @media only screen and (min-device-width: 428px) and (max-device-width: 926px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 3) {
-    
+  .chipsWrapper {
+    padding: 0 15px; 
+  }
 }
 
 /* Media query for larger screens */
 @media only screen and (min-width: 1024px) {
-
-  
+  .chipsWrapper {
+    padding-left: 40px; 
+  }
 }
